language multiscreen update

--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -19,7 +19,8 @@
     "Premium User": "premium user",
     "Remove Account": "Remove Account",
     "Change Language": "Change Language",
-    "Read More": "Read More"
+    "Read More": "Read More",
+    "Select Language": "Select Language"
   },
   "Editprofile": {
     "Edit Profile": "Edit Profile",
