--- a/src/language/locales/hi.json
+++ b/src/language/locales/hi.json
@@ -19,7 +19,8 @@
     "Premium User": "प्रीमियम उपयोगकर्ता",
     "Remove Account": "खाता हटाएँ",
     "Change Language": "भाषा बदलें",
-    "Read More": "और पढ़ें"
+    "Read More": "और पढ़ें",
+    "Select Language": "भाषा चुनें"
   },
   "Editprofile": {
     "Edit Profile": "प्रोफ़ाइल संपादित करें",
