--- a/src/language/locales/ma.json
+++ b/src/language/locales/ma.json
@@ -19,7 +19,8 @@
     "Premium User": "പ്രീമിയം ഉപയോക്താവ്",
     "Remove Account": "അക്കൗണ്ട് നീക്കം ചെയ്യുക",
     "Change Language": "ഭാഷ മാറ്റുക",
-    "Read More": "കൂടുതൽ വായിക്കുക"
+    "Read More": "കൂടുതൽ വായിക്കുക",
+    "Select Language": "ഭാഷ തിരഞ്ഞെടുക്കുക"
   },
   "Sim1": {
     "Sim Test": "സിം പരീക്ഷണം",
