--- a/src/language/locales/ta.json
+++ b/src/language/locales/ta.json
@@ -19,7 +19,8 @@
     "Premium User": "பிரீமியம் பயனர்",
     "Remove Account": "கணக்கை நீக்கு",
     "Change Language": "மொழி மாற்றவும்",
-    "Read More": "மேலும் படிக்கவும்"
+    "Read More": "மேலும் படிக்கவும்",
+    "Select Language": "மொழியை தேர்ந்தெடுக்கவும்"
   },
   "Editprofile": {
     "Edit Profile": "சுயவிவரத்தை திருத்தவும்",
