--- a/src/language/locales/te.json
+++ b/src/language/locales/te.json
@@ -19,7 +19,8 @@
     "Premium User": "ప్రీమియం వినియోగదారు",
     "Remove Account": "ఖాతాను తొలగించండి",
     "Change Language": "భాష మార్చండి",
-    "Read More": "మరింత చదవండి"
+    "Read More": "మరింత చదవండి",
+    "Select Language": "భాషను ఎంచుకోండి"
   },
   "Sim1": {
     "Sim Test": "సిమ్ పరీక్ష",
