--- a/src/language/locales/mr.json
+++ b/src/language/locales/mr.json
@@ -19,7 +19,8 @@
     "Premium User": "प्रिमियम वापरकर्ता",
     "Remove Account": "खाते हटवा",
     "Change Language": "भाषा बदला",
-    "Read More": "अधिक वाचा"
+    "Read More": "अधिक वाचा",
+    "Select Language": "भाषा निवडा"
   },
   "Editprofile": {
     "Edit Profile": "प्रोफाइल संपादित करा",
