Bugs and AlignMent issues

--- a/src/language/locales/ta.json
+++ b/src/language/locales/ta.json
@@ -121,8 +121,8 @@
   },
   "Sim1": {
     "SIM Test": "SIM சோதனை",
-    "Question":"கேள்வி",
-    "of":"இல்",
+    "Question": "கேள்வி",
+    "of": "இல்",
     "Discover Your Score": "உங்கள் மதிப்பெண்களை கண்டறியவும்",
     "Smoking gives me a new energy whenever I feel low": "எனக்கு குறைவாக உணரும்போது புகைபிடித்தால் புதிய சக்தி கிடைக்கிறது",
     "Smoking clears my thoughts and gives me new ideas": "புகைபிடித்தால் என் எண்ணங்களை தெளிவுபடுத்தி புதிய யோசனைகளை தருகிறது",
@@ -263,6 +263,7 @@
     "or contact us by post at": "அல்லது எங்களை அஞ்சல் மூலம் தொடர்பு கொள்ளவும்",
     "If you have questions or comments about this notice, you may email us at": "இந்த அறிவிப்பு பற்றி உங்களுக்கு கேள்விகள் அல்லது கருத்துகள் இருந்தால், நீங்கள் எங்களுக்கு மின்னஞ்சல் அனுப்பலாம்",
     "HOW CAN YOU CONTACT US ABOUT THIS NOTICE?": "இந்த அறிவிப்பு பற்றி நீங்கள் எங்களை எவ்வாறு தொடர்பு கொள்ளலாம்?",
+    "'HOW CAN YOU CONTACT US ABOUT THIS NOTICE?' below.": "'இந்த அறிவிப்பைப் பற்றி எங்களை எப்படி தொடர்புகொள்வது?' கீழே.",
     "We may update this Privacy Notice from time to time. The updated version will be indicated by an updated 'Revised' date at the top of this Privacy Notice. If we make material changes to this Privacy Notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this Privacy Notice frequently to be informed of how we are protecting your information.": "நாங்கள் இந்த தனியுரிமைக் கொள்கையை அவ்வப்போது புதுப்பிக்கலாம். புதுப்பிக்கப்பட்ட பதிப்பு இந்த தனியுரிமைக் கொள்கையின் மேற்பகுதியில் 'திருத்தப்பட்ட' தேதியால் குறிக்கப்படும். இந்த தனியுரிமைக் கொள்கையில் முக்கியமான மாற்றங்களைச் செய்தால், அத்தகைய மாற்றங்களைப் பற்றிய அறிவிப்பை முக்கியமாக இடுகையிடுவதன் மூலமோ அல்லது உங்களுக்கு நேரடியாக அறிவிப்பு அனுப்புவதன் மூலமோ உங்களுக்கு தெரிவிக்கலாம். உங்கள் தகவலை நாங்கள் எவ்வாறு பாதுகாக்கிறோம் என்பதை அறிந்துகொள்ள இந்த தனியுரிமைக் கொள்கையை அடிக்கடி மறுபரிசீலனை செய்ய உங்களை ஊக்குவிக்கிறோம்.",
     "Yes, we will update this notice as necessary to stay compliant with relevant laws.": "ஆம், தொடர்புடைய சட்டங்களுக்கு இணங்குவதற்கு தேவையானபடி இந்த அறிவிப்பை புதுப்பிப்போம்.",
     "In Short": "சுருக்கமாக",
@@ -270,7 +271,8 @@
     "Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track ('DNT') feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. At this stage, no uniform technology standard for recognising and implementing DNT signals has been finalised. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this Privacy Notice.": "பெரும்பாலான வலை உலாவிகள் மற்றும் சில மொபைல் இயக்க முறைமைகள் மற்றும் மொபைல் பயன்பாடுகளில் 'டிராக் செய்ய வேண்டாம்' ('DNT') அம்சம் அல்லது அமைப்பு உள்ளது, இதை நீங்கள் உங்கள் ஆன்லைன் உலாவல் செயல்பாடுகள் பற்றிய தரவு கண்காணிக்கப்படுவதையோ அல்லது சேகரிக்கப்படுவதையோ தடுக்க உங்கள் தனியுரிமை விருப்பத்தை சமிக்ஞையாக்குவதற்கு செயல்படுத்தலாம். இந்த நிலையில், DNT சமிக்ஞைகளை அடையாளம் காணவும் செயல்படுத்தவும் ஒரு சீரான தொழில்நுட்ப தரநிலை இறுதி செய்யப்படவில்லை. எனவே, நாங்கள் தற்போது DNT உலாவி சமிக்ஞைகளுக்கு அல்லது உங்கள் ஆன்லைனில் கண்காணிக்கப்பட வேண்டாம் என்ற உங்கள் தேர்வை தானாகவே தெரிவிக்கும் வேறு எந்த பொறிமுறைக்கும் பதிலளிக்கவில்லை. எதிர்காலத்தில் ஆன்லைன் கண்காணிப்புக்கான ஒரு தரநிலை ஏற்றுக்கொள்ளப்பட்டு அதை நாங்கள் பின்பற்ற வேண்டியிருந்தால், இந்த தனியுரிமைக் கொள்கையின் திருத்தப்பட்ட பதிப்பில் அந்த நடைமுறையைப் பற்றி உங்களுக்கு தெரிவிப்போம்.",
     "CONTROLS FOR DO-NOT-TRACK FEATURES": "டிராக் செய்ய வேண்டாம் அம்சங்களுக்கான கட்டுப்பாடுகள்",
     "If you have questions or comments about your privacy rights, you may email us at": "உங்கள் தனியுரிமை உரிமைகள் பற்றி உங்களுக்கு கேள்விகள் அல்லது கருத்துகள் இருந்தால், நீங்கள் எங்களுக்கு மின்னஞ்சல் அனுப்பலாம்",
-    "Cookies and similar technologies: Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Services.": "குக்கீகள் மற்றும் ஒத்த தொழில்நுட்பங்கள்: பெரும்பாலான வலை உலாவிகள் இயல்புநிலையாக குக்கீகளை ஏற்க அமைக்கப்பட்டுள்ளன. உங்களுக்கு விருப்பமிருந்தால், பொதுவாக உங்கள் உலாவியை குக்கீகளை அகற்றுவதற்கும் குக்கீகளை நிராகரிப்பதற்கும் அமைக்கலாம். நீங்கள் குக்கீகளை அகற்றுவதற்கு அல்லது நிராகரிப்பதற்கு தேர்ந்தெடுத்தால், இது எங்கள் சேவைகளின் சில அம்சங்கள் அல்லது சேவைகளை பாதிக்கலாம்.",
+    "Cookies and similar technologies": "குக்கிகள் மற்றும் அதே போன்ற தொழில்நுட்பங்கள்",
+    "Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Services.": "பொதுவாக பெரும்பாலான இணைய உலாவிகள் குக்கிகளை இயல்புநிலையாக ஏற்க அமைக்கப்பட்டுள்ளன. நீங்கள் விரும்பினால், உங்களின் உலாவியில் குக்கிகளை நீக்கவும் மறுக்கும் வகையில் அமைக்கலாம். நீங்கள் குக்கிகளை நீக்க அல்லது மறுக்கும் என்பதைத் தேர்வு செய்தால், இது எங்கள் சேவைகளின் சில அம்சங்கள் அல்லது சேவைகள் மீது பாதிப்பை ஏற்படுத்தலாம்.",
     "Upon your request to terminate your account, we will deactivate or delete your account and information from our active databases. However, we may retain some information in our files to prevent fraud, troubleshoot problems, assist with any investigations, enforce our legal terms and/or comply with applicable legal requirements.": "உங்கள் கணக்கை முடிவுக்கு கொண்டுவருவதற்கான உங்கள் கோரிக்கையின் பேரில், எங்கள் செயலில் உள்ள தரவுத்தளங்களிலிருந்து உங்கள் கணக்கையும் தகவல்களையும் நாங்கள் செயலிழக்கச் செய்வோம் அல்லது நீக்குவோம். இருப்பினும், மோசடியைத் தடுக்கவும், சிக்கல்களைத் தீர்க்கவும், எந்தவொரு விசாரணைகளுக்கு உதவவும், எங்கள் சட்டப்பூர்வ விதிமுறைகளை அமல்படுத்தவும் மற்றும்/அல்லது பொருந்தக்கூடிய சட்ட தேவைகளுக்கு இணங்கவும் சில தகவல்களை எங்கள் கோப்புகளில் வைத்திருக்கலாம்.",
     "Contact us using the contact information provided.": "வழங்கப்பட்ட தொடர்பு தகவலைப் பயன்படுத்தி எங்களைத் தொடர்பு கொள்ளவும்.",
     "Log in to your account settings and update your user account.": "உங்கள் கணக்கு அமைப்புகளில் உள்நுழைந்து உங்கள் பயனர் கணக்கை புதுப்பிக்கவும்.",
@@ -542,7 +544,8 @@
     "Unit No. 105, First Floor, Iris Tech Park, Sector-48, Gurgaon, Haryana 122018.": "யூனிட் எண். 105, முதல் தளம், ஐரிஸ் டெக் பார்க், செக்டர்-48, குர்கான், ஹரியானா 122018.",
     "We are Cignix ('Company', 'we', 'us', or 'our'), a company registered in India at": "நாங்கள் சிக்னிக்ஸ் ('நிறுவனம்', 'நாங்கள்', 'எங்களுக்கு', அல்லது 'எங்கள்'), இந்தியாவில் பதிவு செய்யப்பட்ட ஒரு நிறுவனம்",
     "AGREEMENT TO OUR LEGAL TERMS": "எங்கள் சட்ட விதிமுறைகளுக்கு ஒப்பந்தம்",
-    "About Cignix": "சிக்னிக்ஸ் பற்றி"
+    "About Cignix": "சிக்னிக்ஸ் பற்றி",
+    "Your submissions": "உங்கள் சமர்ப்பிப்புகள்"
   },
   "PlaceHolder": {
     "Type your question here...": "உங்கள் கேள்வியை இங்கே தட்டச்சு செய்யவும்...",
@@ -557,5 +560,11 @@
     "Enter Coupon Code": "கூப்பன் குறியீட்டை உள்ளிடவும்",
     "Enter Otp": "OTP உள்ளிடவும்",
     "Whatsapp Number": "வாட்ஸ்அப் எண்"
+  },
+  "Test": {
+    "Time for a Quick Exercise!": "ஒரு விரைவான பயிற்சிக்கான நேரம்!",
+    "Let’s reinforce what you learned! Complete": "நீங்கள் கற்றதை உறுதிப்படுத்துவோம்! முடிக்கவும்",
+    "the short exercise below": "கீழே உள்ள குறுகிய பயிற்சியை",
+    "Submit & Continue": "சமர்ப்பிக்கவும் & தொடரவும்"
   }
 }
