--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -285,6 +285,7 @@
     "or contact us by post at": "or contact us by post at",
     "If you have questions or comments about this notice, you may email us at": "If you have questions or comments about this notice, you may email us at",
     "HOW CAN YOU CONTACT US ABOUT THIS NOTICE?": "HOW CAN YOU CONTACT US ABOUT THIS NOTICE?",
+    "'HOW CAN YOU CONTACT US ABOUT THIS NOTICE?' below.":"'HOW CAN YOU CONTACT US ABOUT THIS NOTICE?' below.",
     "We may update this Privacy Notice from time to time. The updated version will be indicated by an updated 'Revised' date at the top of this Privacy Notice. If we make material changes to this Privacy Notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this Privacy Notice frequently to be informed of how we are protecting your information.": "We may update this Privacy Notice from time to time. The updated version will be indicated by an updated 'Revised' date at the top of this Privacy Notice. If we make material changes to this Privacy Notice, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this Privacy Notice frequently to be informed of how we are protecting your information.",
     "Yes, we will update this notice as necessary to stay compliant with relevant laws.": "Yes, we will update this notice as necessary to stay compliant with relevant laws.",
     "In Short": "In Short",
@@ -565,7 +566,8 @@
     "Unit No. 105, First Floor, Iris Tech Park, Sector-48, Gurgaon, Haryana 122018.": "Unit No. 105, First Floor, Iris Tech Park, Sector-48, Gurgaon, Haryana 122018.",
     "We are Cignix ('Company', 'we', 'us', or 'our'), a company registered in India at": "We are Cignix ('Company', 'we', 'us', or 'our'), a company registered in India at",
     "AGREEMENT TO OUR LEGAL TERMS": "AGREEMENT TO OUR LEGAL TERMS",
-    "About Cignix": "About Cignix"
+    "About Cignix": "About Cignix",
+    "Your submissions":"Your submissions"
   },
   "PlaceHolder": {
     "Type your question here...": "Type your question here...",
@@ -580,5 +582,11 @@
     "Enter Coupon Code": "Enter Coupon Code",
     "Enter Otp": "Enter Otp",
     "Whatsapp Number": "Whatsapp Number"
+  },
+  "Test":{
+    "Time for a Quick Exercise!":"Time for a Quick Exercise!",
+    "Let’s reinforce what you learned! Complete":"Let’s reinforce what you learned! Complete",
+    "the short exercise below":"the short exercise below",
+    "Submit & Continue":"Submit & Continue"
   }
 }
