cignix Language Bud fixing

--- a/src/language/locales/ta.json
+++ b/src/language/locales/ta.json
@@ -3,15 +3,15 @@
   "profile": {
     "Profile": "சுயவிவரம்",
     "Account Settings": "கணக்கு அமைப்புகள்",
-    "Edit Profile": "சுயவிவரத்தை திருத்தவும்",
+    "Edit Profile": "சுயவிவர திருத்தம்",
     "Manage Subscription": "சந்தாவை நிர்வகிக்கவும்",
     "Change Password": "கடவுச்சொல்லை மாற்றவும்",
     "Notification Settings": "அறிவிப்பு அமைப்புகள்",
     "Other Settings": "பிற அமைப்புகள்",
     "Blogs": "வலைப்பதிவுகள்",
-    "News and Media": "செய்திகள் மற்றும் ஊடகம்",
+    "News and Media": "செய்திகள் & ஊடகம்",
     "Help Center": "உதவி மையம்",
-    "Contact Support": "ஆதரவுடன் தொடர்பு கொள்ளவும்",
+    "Contact Support": "உதவிக்கு அழைக்கவும்",
     "Privacy Policy": "தனியுரிமை கொள்கை",
     "Terms and Conditions": "விதிமுறைகள் மற்றும் நிபந்தனைகள்",
     "Logout": "வெளியேறு",
@@ -557,7 +557,7 @@
     "Phone Number": "தொலைபேசி எண்",
     "Date of Birth / Age": "பிறந்த தேதி / வயது",
     "Gender": "பாலினம்",
-    "Enter Coupon Code": "கூப்பன் குறியீட்டை உள்ளிடவும்",
+    "Enter Coupon Code": "கூப்பனை உள்ளிடுக",
     "Enter Otp": "OTP உள்ளிடவும்",
     "Whatsapp Number": "வாட்ஸ்அப் எண்"
   },
