--- a/src/language/locales/hi.json
+++ b/src/language/locales/hi.json
@@ -98,7 +98,7 @@
     "Welcome Back": "फिर से स्वागत है",
     "Welcome description": "अपने मोबाइल नंबर से लॉगिन करें",
     "Mobile Number": "मोबाइल नंबर",
-    "Get Otp": "ओटीपी प्राप्त करें",
+    "Get Otp": "OTP प्राप्त करें",
     "or Login With": "या लॉगिन करें",
     "Google": "गूगल",
     "Password": "पासवर्ड",
@@ -164,7 +164,7 @@
   "Otp": {
     "Verify Your Login": "अपना लॉगिन सत्यापित करें",
     "Enter the verification code we sent to your Number": "हमने आपके नंबर पर जो सत्यापन कोड भेजा है उसे दर्ज करें",
-    "Verify otp": "ओटीपी सत्यापित करें",
+    "Verify otp": "OTP सत्यापित करें",
     "Didn't get the code?": "कोड प्राप्त नहीं हुआ?",
     "Resend": "पुनः भेजें"
   },
@@ -216,15 +216,16 @@
     "Submit Question": "प्रश्न सबमिट करें",
     "No Questions, I Understand": "कोई प्रश्न नहीं, मुझे समझ में आया",
     "Got It": "समझ गया",
-    "Enter 6 Digit Otp": "6 अंकों का Otp दर्ज करें",
+    "Enter 6 Digit Otp": "6 अंकों का OTP दर्ज करें",
     "Enter Your Whatsapp Number": "अपना Whatsapp नंबर दर्ज करें",
-    "Verify Otp": "Otp सत्यापित करें",
-    "Send Otp": "Otp भेजें",
+    "Verify Otp": "OTP सत्यापित करें",
+    "Send Otp": "OTP भेजें",
     "Whatsapp Number": "Whatsapp नंबर",
     "Is the given number during registration is your whatsapp number": "क्या पंजीकरण के दौरान दिया गया नंबर आपका whatsapp नंबर है?",
     "No": "नहीं",
     "Yes": "हाँ",
-    "Please Enter 6 Digit Otp": "कृपया 6 अंकों का Otp दर्ज करें",
+    "Skip": "छोड़ें",
+    "Please Enter 6 Digit Otp": "कृपया 6 अंकों का OTP दर्ज करें",
     "Current": "वर्तमान",
     "Watched": "देखा",
     "Recently Unlocked": "हाल ही में अनलॉक किया गया"
