--- a/src/language/locales/ma.json
+++ b/src/language/locales/ma.json
@@ -173,15 +173,16 @@
     "Submit Question": "ചോദ്യങ്ങൾ സമർപ്പിക്കുക",
     "No Questions, I Understand": "ചോദ്യങ്ങൾ ഇല്ല, എനിക്ക് മനസ്സിലായിരിക്കുന്നു",
     "Got It": "മനസ്സിലായിരിക്കുന്നു",
-    "Enter 6 Digit Otp": "6 അക്ക Otp നൽകുക",
+    "Enter 6 Digit Otp": "6 അക്ക OTP നൽകുക",
     "Enter Your Whatsapp Number": "നിങ്ങളുടെ Whatsapp നമ്പർ നൽകുക",
-    "Verify Otp": "Otp സ്ഥിരീകരിക്കുക",
-    "Send Otp": "Otp അയയ്ക്കുക",
+    "Verify Otp": "OTP സ്ഥിരീകരിക്കുക",
+    "Send Otp": "OTP അയയ്ക്കുക",
     "Whatsapp Number": "Whatsapp നമ്പർ",
     "Is the given number during registration is your whatsapp number": "രജിസ്റ്റർ ചെയ്യുമ്പോൾ നൽകിയ നമ്പർ നിങ്ങളുടെ whatsapp നമ്പർ ആണോ?",
     "No": "ഇല്ല",
     "Yes": "അതെ",
-    "Please Enter 6 Digit Otp": "ദയവായി 6 അക്ക Otp നൽകുക",
+    "Skip": "തിര്‍ക്കുക",
+    "Please Enter 6 Digit Otp": "ദയവായി 6 അക്ക OTP നൽകുക",
     "Current": "നിലവിലെ",
     "Watched": "കണ്ടു",
     "Recently Unlocked": "സമീപകാലത്ത് തുറന്നത്"
