--- a/src/language/locales/mr.json
+++ b/src/language/locales/mr.json
@@ -198,15 +198,16 @@
     "Submit Question": "प्रश्न सबमिट करा",
     "No Questions, I Understand": "कोणतेही प्रश्न नाहीत, मला समजले",
     "Got It": "समजले",
-    "Enter 6 Digit Otp": "6 अंकी Otp प्रविष्ट करा",
+    "Enter 6 Digit Otp": "6 अंकी OTP प्रविष्ट करा",
     "Enter Your Whatsapp Number": "तुमचा Whatsapp नंबर प्रविष्ट करा",
-    "Verify Otp": "Otp सत्यापित करा",
-    "Send Otp": "Otp पाठवा",
+    "Verify Otp": "OTP सत्यापित करा",
+    "Send Otp": "OTP पाठवा",
     "Whatsapp Number": "Whatsapp नंबर",
     "Is the given number during registration is your whatsapp number": "नोंदणी दरम्यान दिलेला नंबर तुमचा whatsapp नंबर आहे का?",
     "No": "नाही",
     "Yes": "होय",
-    "Please Enter 6 Digit Otp": "कृपया 6 अंकी Otp भरा",
+    "Skip": "वगळा",
+    "Please Enter 6 Digit Otp": "कृपया 6 अंकी OTP भरा",
     "Current": "सध्याचे",
     "Watched": "पाहिले",
     "Recently Unlocked": "अलीकडे अनलॉक केले"
