--- a/src/language/locales/ta.json
+++ b/src/language/locales/ta.json
@@ -198,15 +198,16 @@
     "Submit Question": "கேள்வியை சமர்ப்பிக்கவும்",
     "No Questions, I Understand": "கேள்விகள் இல்லை, எனக்கு புரிகிறது",
     "Got It": "புரிந்தது",
-    "Enter 6 Digit Otp": "6 இலக்க Otp ஐ உள்ளிடவும்",
+    "Enter 6 Digit Otp": "6 இலக்க OTP ஐ உள்ளிடவும்",
     "Enter Your Whatsapp Number": "உங்கள் Whatsapp எண்ணை உள்ளிடவும்",
-    "Verify Otp": "Otp ஐ சரிபார்க்கவும்",
-    "Send Otp": "Otp ஐ அனுப்பவும்",
+    "Verify Otp": "OTP ஐ சரிபார்க்கவும்",
+    "Send Otp": "OTP ஐ அனுப்பவும்",
     "Whatsapp Number": "Whatsapp எண்",
     "Is the given number during registration is your whatsapp number": "பதிவு செய்யும் போது கொடுக்கப்பட்ட எண் உங்கள் whatsapp எண் ஆகுமா?",
     "No": "இல்லை",
     "Yes": "ஆம்",
-    "Please Enter 6 Digit Otp": "தயவுசெய்து 6 இலக்க Otp ஐ உள்ளிடவும்",
+    "Skip": "தவிர்",
+    "Please Enter 6 Digit Otp": "தயவுசெய்து 6 இலக்க OTP ஐ உள்ளிடவும்",
     "Current": "தற்போதைய",
     "Watched": "பார்த்தது",
     "Recently Unlocked": "சமீபத்தில் திறக்கப்பட்டது"
