--- a/src/language/locales/te.json
+++ b/src/language/locales/te.json
@@ -179,15 +179,16 @@
     "Submit Question": "ప్రశ్నను సమర్పించండి",
     "No Questions, I Understand": "ప్రశ్నలు లేవు, నాకు అర్థమైంది",
     "Got It": "అర్థమైంది",
-    "Enter 6 Digit Otp": "6 అంకెల Otp నమోదు చేయండి",
+    "Enter 6 Digit Otp": "6 అంకెల OTP నమోదు చేయండి",
     "Enter Your Whatsapp Number": "మీ Whatsapp నంబర్ నమోదు చేయండి",
-    "Verify Otp": "Otp ను ధృవీకరించండి",
-    "Send Otp": "Otp పంపండి",
+    "Verify Otp": "OTP ను ధృవీకరించండి",
+    "Send Otp": "OTP పంపండి",
     "Whatsapp Number": "Whatsapp నంబర్",
     "Is the given number during registration is your whatsapp number": "నమోదు సమయంలో ఇచ్చిన నంబర్ మీ whatsapp నంబర్ అవుతుందా?",
     "No": "కాదు",
     "Yes": "అవును",
-    "Please Enter 6 Digit Otp": "దయచేసి 6 అంకెల Otp నమోదు చేయండి",
+    "Skip": "దాటవేయి",
+    "Please Enter 6 Digit Otp": "దయచేసి 6 అంకెల OTP నమోదు చేయండి",
     "Current": "ప్రస్తుత",
     "Watched": "చూసిన",
     "Recently Unlocked": "ఇటీవల అన్లాక్ చేయబడింది"
