--- a/src/language/locales/ta.json
+++ b/src/language/locales/ta.json
@@ -571,5 +571,23 @@
     "Let’s reinforce what you learned! Complete": "நீங்கள் கற்றதை உறுதிப்படுத்துவோம்! முடிக்கவும்",
     "the short exercise below": "கீழே உள்ள குறுகிய பயிற்சியை",
     "Submit & Continue": "சமர்ப்பிக்கவும் & தொடரவும்"
-  }
+  },
+  "Success": {
+  "Congratulations on": "அவதரிப்புக்கு வாழ்த்துக்கள்",
+  "Completing the Quiz": "குவிஜை முடித்ததற்கான வாழ்த்துக்கள்",
+  "To check your scores and see how you did": "உங்கள் மதிப்பெண்கள் மற்றும் நீங்கள் எவ்வாறு செயல்பட்டீர்களோ என்பதை பார்க்க",
+  "please sign up or log in!": "தயவு செய்து பதிவு செய்யவும் அல்லது உள்நுழைக!",
+  "Sign Up to View Scores": "மதிப்பெண்களை பார்க்க பதிவு செய்யவும்"
+},
+"Registerscreen": {
+  "Let’s Get Started": "ஆரம்பமாக விடுவோம்",
+  "Create an account to unlock personalised videos and support to help you quit smoking": "பதிவு செய்யவும், புகைத்தல் நிறுத்த உதவும் தனிப்பயனாக்கப்பட்ட வீடியோக்களையும் ஆதரவு பெற்று துவங்கவும்",
+  "By signing up, you agree to our": "பதிவு செய்து, நீங்கள் ஒப்புக்கொள்கிறீர்கள்",
+  "Terms & Conditions": "பட்டியல்கள் மற்றும் விதிமுறைகள்",
+  "and": "மற்றும்",
+  "Privacy Policy": "பிரைவேசி கொள்கை",
+  "Get Started": "துவங்கவும்",
+  "Already have an account?": "ஏற்கனவே கணக்கு உண்டா?",
+  "Log in": "உள்நுழையவும்"
+}
 }
